--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 		gtag('config', 'UA-171593765-1');
 	</script>
 
-	
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Benjamin Wittenbrink - Home</title>
-	<meta name="description" content="">
+	<meta name="description" content="Benjamin Wittenbrink Personal Website">
+	<meta name="keywords" content="Benjamin Witttenbrink, Wittenbrink, Economics, Website, Stanford">
+	<meta name="author" content="Benjamin Wittenbrink">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="all,follow">
+
+
 	<!-- Bootstrap CSS-->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<!-- theme stylesheet-->
@@ -35,7 +39,6 @@
 
 <body id='main-body'>
 
-	
 	<div id='wrapper' class='d-flex'>
 
 		<!-- Sidebar --> 
@@ -89,10 +92,11 @@
 	</div>
 
 
-	<!-- Bootstrap core JavaScript -->
-	<script src="assets/js/custom.js"></script>
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
+    <!-- JavaScript files-->
+    <script src="jquery/jquery.min.js"></script>
+    <!-- Custom JavaScript (from Cody)-->
+    <script src="js/custom.js"></script>
+
 	<footer class = "page-footer text-right py-3" style="font-size: 12px; margin-right: 10px">
 		Style inspiration from <a href="https://codyfcook.github.io/">Cody Cook</a>.
 	</div>
