--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 	</div>
 
 
-    <!-- JavaScript files-->
-    <script src="jquery/jquery.min.js"></script>
-    <!-- Custom JavaScript (from Cody)-->
-    <script src="js/custom.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="assets/js/jquery/jquery.min.js"></script>
+  <!-- Custom JavaScript (from Cody)-->
+  <script src="assets/js/custom.js"></script>
 
 	<footer class = "page-footer text-right py-3" style="font-size: 12px; margin-right: 10px">
 		Style inspiration from <a href="https://codyfcook.github.io/">Cody Cook</a>.
