--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171593765-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -113,7 +113,7 @@
                     </div>
                   </div>
 
-                  <div class="panel panel-project">
+                  <div class="panel panel-default">
                     <div class="panel-heading accordion research-accordion"><h5> A Proposal to Raise Incentives for Student Education  <a href = "assets/docs/bw_rise.pdf" target="_blank">[paper]</a></h5>  with Claire Dinshaw, Antonia Hellman, Jonathan Lipman, and Julia Paris, 2020. 
                     </div>
                     <div class="panel-body panel-project">
@@ -139,7 +139,15 @@
                       </div>
                     </div>
                   </div>
-
+                  <div class="panel panel-default">
+                    <div class="panel-heading accordion research-accordion"><h5> Pullman: The Man, the Town, the Strike</h5> <i> The Concord Review </i> Winter 2016, access restricted. 
+                    </div>
+                    <div class="panel-body panel-project">
+                      <div class='panel-text'>
+                        What is the role of the U.S. government in labor strikes? Should the federal government protect workers’ rights and allow —and perhaps even promote—unionization, as was advocated for by labor activists and progressives? Or, as industrialists and the American elite of the 19th century had hoped, should the government support corporate interests in quashing labor strife? Or, alternatively as free-market conservatives and capitalists would wish, should the government remain wholly neutral in disputes, intervening only when absolutely necessary? Is the latter even possible? American public policy prior to 1894 and George M. Pullman would certainly dictate that the government support corporate and commercial interests. Yet, the American Railway Union (ARU), formed in 1893 and championed by Eugene V. Debs vowed to push for labor reform. One of the first paternalistic company towns in the United States—Pullman, Illinois—was founded in 1881 and constructed by George Pullman to house the employees of his railroad car company, the Pullman Palace Car Company (PPCC). The Panic of 1893 resulted in a decreased demand for railroad cars and continental travel, and so Pullman cut worker wages, choosing to pay his shareholders instead. In response, the ARU initiated the Pullman Strike of 1894. Originally limited to the city of Pull- man, the strike capitalized on the widespread dissatisfaction that laborers felt toward their employers, spreading throughout the country. Although an immediate failure for the workers residing in Pullman, the strike ultimately advanced the position of labor in the United States. The strike led to the demise of “government by injunction,” thereby restricting federal intervention in dismantling labor strikes and disputes, and brought forth widespread labor reform, including the establishment and the strengthening of labor unions.
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
