--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
                   <!-- MISC STUFF -->
                   <h2>Other</h2>
                   <div class="panel panel-default">
-                    <div class="panel-heading"><h5> Visualized: COVID-19 testing in Stanford Hospital and Santa Clara County  <a href = "https://www.stanforddaily.com/2020/05/27/visualized-covid-19-testing-in-stanford-hospital-and-santa-clara-county/" target="_blank">[article]</a><a href = "https://github.com/TheStanfordDaily/StanfordDaily-DataViz/blob/master/projects/2020-05-27-covid-testing/" target="_blank">[github]</a></h5> <i> Stanford Daily, </i> 2020. 
+                    <div class="panel-heading"><h5> Visualized: COVID-19 testing in Stanford Hospital and Santa Clara County  <a href = "https://www.stanforddaily.com/2020/05/27/visualized-covid-19-testing-in-stanford-hospital-and-santa-clara-county/" target="_blank">[article]</a><a href = "https://github.com/TheStanfordDaily/StanfordDaily-DataViz/blob/master/projects/2020-05-27-covid-testing/" target="_blank">[github]</a></h5> <i> Best Data Visualization of Volume 257 </i> <br> <i> Stanford Daily, </i> 2020. 
                     </div>
                   </div>
                   <div class="panel panel-default">
@@ -140,7 +140,7 @@
                     </div>
                   </div>
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5> Pullman: The Man, the Town, the Strike</h5> <i> The Concord Review </i> Winter 2016, access restricted. 
+                    <div class="panel-heading accordion research-accordion"><h5> Pullman: The Man, the Town, the Strik <a href="https://www.amazon.com/Concord-Review-V27-No-Winter/dp/1540730042" target="_blank">[paper]</a></h5> <i> The Concord Review </i> Winter 2016, access restricted. 
                     </div>
                     <div class="panel-body panel-project">
                       <div class='panel-text'>
