--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<!-- Bootstrap CSS-->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<!-- theme stylesheet-->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel = "stylesheet">
 	<link rel="stylesheet" href="assets/css/defaultstyle.css" id="theme-stylesheet">
@@ -52,7 +52,7 @@
 			</ul>
 			<hr>
 			<ul class = "sidebar-menu list-unstyled">
-				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="mailto:witten@stanford.edu" class ="btn btn-outline-primary btn-sidebar" target="_blank" role = "button">Email</a></li>
+				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="mailto:witten@stanford.edu" class ="btn btn-outline-primary btn-sidebar" target="_blank" role = "button"> Email</a></li>
 				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="http://linkedin.com/in/bwittenbrink/" class ="btn btn-outline-primary btn-sidebar" target="_blank" role = "button">LinkedIn</a></li>
 				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="assets/docs/bw_cv.pdf" class ="btn btn-outline-primary btn-sidebar" target="_blank" role = "button">CV</a></li> 
 			</ul>
@@ -77,6 +77,14 @@
 								<p> I am a rising senior at Stanford, studying Economics and Mathematics. I am interested in applying a quantitative lens to better understand issues of economic, political, and social importance. </p>
 
 								<p> I am currently a summer analyst on the New York Federal Reserve's <a href="https://www.newyorkfed.org/research/economists/department">Financial Intermediation Research </a> team, and a research assistant for <a href="https://mgduggan.people.stanford.edu"> Mark Duggan </a> and <a href="https://web.stanford.edu/~gopi/"> Gopi Goda</a> at the National Bureau of Economic Research (and previously at the Stanford Institute for Economic Policy Research). Last year, I spent the summer in Zurich at <a href = "https://www.quantco.com"> QuantCo</a>, a data science startup working at the intersection of econometrics and machine learning. Before that, I worked on a nueroeconomics project with the <a href="https://apexlab.uchicago.edu"> Apex Lab </a> and as a research assistant within <a href="https://voices.uchicago.edu/jlist"> John List</a>'s lab, both at the University of Chicago. </p>
+								
+								<!-- <p style ="text-align: center"> 
+
+									<a href = "mailto:witten@stanford.edu" target = "_blank" style = "color: black"> <span class="material-icons" id = "social-icon"> mail </span></a> 
+									<a href = "mailto:witten@stanford.edu" target = "_blank" style = "color: black"><span class="material-icons-outlined"> article </span> </a> 
+									<a href = "mailto:witten@stanford.edu" target = "_blank" style = "color: black"><span class="material-icons"> work </span> </a>  
+
+								</p> -->
 							</div>
 
 							<div class="col-sm-8 col-md-4">
@@ -98,7 +106,7 @@
 	<script src="assets/js/custom.js"></script>
 
 	<div class = "page-footer text-right py-3" style="font-size: 12px; margin-right: 10px">
-		Style inspiration from <a href="https://codyfcook.github.io/">Cody Cook</a>.
+		Style inspiration from Cody Cook.
 	</div>
 
 </body>
