button border fix 07/17

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 			</ul>
 			<hr>
 			<ul class = "sidebar-menu list-unstyled">
-				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="mailto:witten@stanford.edu" class ="btn btn-outline-primary btn-sidebar" target="_blank" role = "button"> Email</a></li>
-				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="http://linkedin.com/in/bwittenbrink/" class ="btn btn-outline-primary btn-sidebar" target="_blank" role = "button">LinkedIn</a></li>
-				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="assets/docs/bw_cv.pdf" class ="btn btn-outline-primary btn-sidebar" target="_blank" role = "button">CV</a></li> 
+				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="mailto:witten@stanford.edu" class ="btn btn-outline-primary btn-sidebar bg-transparent border-0" target="_blank" role = "button"> Email</a></li>
+				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="http://linkedin.com/in/bwittenbrink/" class ="btn btn-outline-primary btn-sidebar bg-transparent border-0" target="_blank" role = "button">LinkedIn</a></li>
+				<li class = "sidebar-list-item"><i class="mr-3"></i><a href="assets/docs/bw_cv.pdf" class ="btn btn-outline-primary btn-sidebar bg-transparent border-0" target="_blank" role = "button">CV</a></li> 
 			</ul>
 		</div>
 
