08/25 small typo fix

--- a/projects.html
+++ b/projects.html
@@ -131,7 +131,7 @@
                     </div>
                   </div>
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5> Antitrust in the Digital Age: Combatting Facebook's Market Dominance  <a href = "assets/docs/bw_antitrust.pdf" target="_blank">[paper]</a></h5>  2018. 
+                    <div class="panel-heading accordion research-accordion"><h5> Antitrust in the Digital Age: Combating Facebook's Market Dominance  <a href = "assets/docs/bw_antitrust.pdf" target="_blank">[paper]</a></h5>  2018. 
                     </div>
                     <div class="panel-body panel-project">
                       <div class='panel-text'>
@@ -140,7 +140,7 @@
                     </div>
                   </div>
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5> Pullman: The Man, the Town, the Strik <a href="https://www.amazon.com/Concord-Review-V27-No-Winter/dp/1540730042" target="_blank">[paper]</a></h5> <i> The Concord Review </i> Winter 2016, access restricted. 
+                    <div class="panel-heading accordion research-accordion"><h5> Pullman: The Man, the Town, the Strike <a href="https://www.amazon.com/Concord-Review-V27-No-Winter/dp/1540730042" target="_blank">[paper]</a></h5> <i> The Concord Review </i> Winter 2016, access restricted. 
                     </div>
                     <div class="panel-body panel-project">
                       <div class='panel-text'>
