added two projs, changed photo

--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
                 <!-- Research -->
                 <h2>Research</h2>
 
-                <div class="panel-group">
+                
                   <div class="panel panel-default">
                     <div class="panel-heading accordion research-accordion"><h5>Analyzing Candidate's Ideological Messaging Throughout the Electoral System <a href="assets/docs/bw_id_draft.pdf" target="_blank">[draft]</a><a href="assets/docs/bw_id_slides.pdf" target="_blank">[slides]</a></h5> under the direction of Matthew Gentzkow, <i> in progress. </i>
                     </div>
@@ -89,6 +89,18 @@
                       </div>
                     </div>
                   </div>
+
+                  <div class="panel panel-default">
+                    <div class="panel-heading accordion research-accordion"><h5>The Minimum Wage and Social Security Disability Insurance <a target="_blank">[paper]</a></h5> with Mark Duggan and Gopi Goda, 2021.
+                    </div>
+                    <div class="panel-body panel-project">
+                      <div class='panel-text'>
+                        Several factors influence the decision to apply for the Social Security Disability Insurance (SSDI) and Supplemental Security Income (SSI) programs, which provided disability benefits to 13 million non-elderly individuals in the U.S. in April 2021. In this study, we examine how changes in the minimum wage affect the number of applications to both programs. Theoretically, a higher minimum wage could either increase or reduce the number applying for disability benefits. We leverage changes in the effective minimum wage across states and over time during the 2000-2015 period to estimate this causal effect. We find that the effect of the minimum wage is positive and statistically significant in our main specification: a one dollar increase in the minimum wage increases the total application rate for SSI and SSDI combined by 0.04 percentage points, an increase of 2 percent. Our estimates suggest that application rates to both programs would increase by approximately 10 percent if the federal minimum wage were increased to $15, with the largest increases expected in states that currently have the lowest minimum wages.
+                      </div>
+                    </div>
+                  </div>
+
+
                   <div class="panel panel-default">
                     <div class="panel-heading accordion research-accordion"><h5>Visually Evoked Brain Potentials Differences During Consumer Choice Reflect Ultimate Market Outcomes <a target="_blank">[paper]</a> </h5> with John Veillette, Shannon Head, Katherine Reis, and Howard Nusbaum, 2020.  </i>
                     </div>
@@ -126,6 +138,18 @@
                   <br>
                   <!-- MISC STUFF -->
                   <h2>Other</h2>
+
+                  <div class="panel panel-default">
+                  	<div class="panel-heading"><h5> Crowdfunding: Predicting Kickstarter Project Success <a href="assets/docs/bw_crowdfunding.pdf" target="_blank">[paper]</a></h5> with Sauren Khosla and Joel Reinecke, 2021. 
+                  	</div>
+                  	<div class="panel-body panel-project">
+                  		<div class="panel-text">
+                  			Using over 220, 000 project proposals scraped from Kickstarter, we predict whether a Kickstarter project proposal will succeed or fail in achieving its fundraising goal using only information from project launch. We evaluate the performance of various machine learning models for these predictions based on the project category, fundraising goal, and short descriptions of the proposed product. We achieve an accuracy rate of 83% with our best model.
+                  		</div>
+                  	</div>
+                  </div>
+
+
                   <div class="panel panel-default">
                     <div class="panel-heading"><h5> Visualized: COVID-19 testing in Stanford Hospital and Santa Clara County  <a href = "https://www.stanforddaily.com/2020/05/27/visualized-covid-19-testing-in-stanford-hospital-and-santa-clara-county/" target="_blank">[article]</a><a href = "https://github.com/TheStanfordDaily/StanfordDaily-DataViz/blob/master/projects/2020-05-27-covid-testing/" target="_blank">[github]</a></h5> <i> Best Data Visualization of Volume 257 </i> <br> <i> Stanford Daily, </i> 2020. 
                     </div>
