bio update + cv

--- a/projects.html
+++ b/projects.html
@@ -140,7 +140,7 @@
                   <h2>Other</h2>
 
                   <div class="panel panel-default">
-                  	<div class="panel-heading"><h5> Crowdfunding: Predicting Kickstarter Project Success <a href="assets/docs/bw_crowdfunding.pdf" target="_blank">[paper]</a></h5> with Sauren Khosla and Joel Reinecke, 2021. 
+                  	<div class="panel-heading accordion research-accordion"><h5> Crowdfunding: Predicting Kickstarter Project Success <a href="assets/docs/bw_crowdfunding.pdf" target="_blank">[paper]</a></h5> for <i> CS 229 </i> with Sauren Khosla and Joel Reinecke, 2021. 
                   	</div>
                   	<div class="panel-body panel-project">
                   		<div class="panel-text">
