--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 								</button>
 								<h4 class="title">Benjamin Wittenbrink</h4>
 								<p> Welcome! </p>
-								<p> I am currently studying Economics and Mathematics at Stanford (Class of '22). I am interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. </p>
+								<p> I am currently studying Economics and Mathematics at Stanford (Class of '22). I am also pursuing a Masters in Computer Science at Stanford (Class of '23). I am interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. </p>
 
 								<p> 
-									For the past year, I was on a leave of absence, interning at <a href = "https://www.quantco.com"> QuantCo</a>, a data science startup working at the intersection of econometrics and machine learning. 
+									Until August of 2021, I was on a leave of absence, working at <a href = "https://www.quantco.com"> QuantCo</a>, a data science startup at the intersection of econometrics and machine learning. 
 
 									During the summer of 2020, I worked as a summer analyst on the New York Federal Reserve's <a href="https://www.newyorkfed.org/research/economists/department">Financial Intermediation Research </a> team and as a research assistant for <a href="https://mgduggan.people.stanford.edu"> Mark Duggan </a> and <a href="https://web.stanford.edu/~gopi/"> Gopi Goda</a> at the National Bureau of Economic Research (and previously at the Stanford Institute for Economic Policy Research). 
 
