--- a/projects.html
+++ b/projects.html
@@ -112,6 +112,31 @@
                   </div>
                   <br>
 
+
+                  <!-- POLICY -->
+                  <h2>Computer Science</h2>
+
+                  <div class="panel panel-default">
+                    <div class="panel-heading accordion research-accordion"><h5> A NLP Approach to Understanding Patent Acceptance Criteria <a href="assets/docs/bw_patents.pdf" target="_blank">[paper]</a></h5> for <i> CS 229 </i> with Ryan Kearns and Sauren Khosla, 2022. 
+                    </div>
+                    <div class="panel-body panel-project">
+                      <div class="panel-text">
+                        Patent applications and acceptances are a useful domain for assessing the state of innovation across various fields, including biomedical sciences, artificial intelligence, software services, and more. The number of patents filed per year has nearly doubled since 2000 with over 650,000 patent filed in the 2020 fiscal year. Until now, no large-scale corpus of patent filings exists for ML and NLP practitioners to leverage. The Harvard USPTO Patent Dataset (HUPD), consisting of over 4.5 million English-language utility patent applications filed between 2004 and 2018 is the first example of such a corpus. Unlike other, smaller but similar corpora, this dataset contains the inventor-submitted versions of patent applications as opposed to the final versions of granted patents, allowing for the usage of NLP techniques at the time of filing. Taking advantage of this rich data, we vary the metadata inputs to a number of NLP models to conduct an ablation study on the binary classification of filed patents (i.e. acceptance or rejection). Our best metadata-augmented model achieves 63.32% binary classification accuracy, outperforming the best language models from the HUPD paper as well as our baseline models. Yet, for some text fields our best model still cannot outperform bag-of-words models, likely due to specific qualitative linguistic features of these fields.
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="panel panel-default">
+                    <div class="panel-heading accordion research-accordion"><h5> Crowdfunding: Predicting Kickstarter Project Success <a href="assets/docs/bw_crowdfunding.pdf" target="_blank">[paper]</a></h5> for <i> CS 229 </i> with Sauren Khosla and Joel Reinecke, 2021. 
+                    </div>
+                    <div class="panel-body panel-project">
+                      <div class="panel-text">
+                        Using over 220, 000 project proposals scraped from Kickstarter, we predict whether a Kickstarter project proposal will succeed or fail in achieving its fundraising goal using only information from project launch. We evaluate the performance of various machine learning models for these predictions based on the project category, fundraising goal, and short descriptions of the proposed product. We achieve an accuracy rate of 83% with our best model.
+                      </div>
+                    </div>
+                  </div>
+                  <br>
+
                   <!-- POLICY -->
                   <h2>Policy</h2>
 
@@ -138,17 +163,6 @@
                   <br>
                   <!-- MISC STUFF -->
                   <h2>Other</h2>
-
-                  <div class="panel panel-default">
-                  	<div class="panel-heading accordion research-accordion"><h5> Crowdfunding: Predicting Kickstarter Project Success <a href="assets/docs/bw_crowdfunding.pdf" target="_blank">[paper]</a></h5> for <i> CS 229 </i> with Sauren Khosla and Joel Reinecke, 2021. 
-                  	</div>
-                  	<div class="panel-body panel-project">
-                  		<div class="panel-text">
-                  			Using over 220, 000 project proposals scraped from Kickstarter, we predict whether a Kickstarter project proposal will succeed or fail in achieving its fundraising goal using only information from project launch. We evaluate the performance of various machine learning models for these predictions based on the project category, fundraising goal, and short descriptions of the proposed product. We achieve an accuracy rate of 83% with our best model.
-                  		</div>
-                  	</div>
-                  </div>
-
 
                   <div class="panel panel-default">
                     <div class="panel-heading"><h5> Visualized: COVID-19 testing in Stanford Hospital and Santa Clara County  <a href = "https://www.stanforddaily.com/2020/05/27/visualized-covid-19-testing-in-stanford-hospital-and-santa-clara-county/" target="_blank">[article]</a><a href = "https://github.com/TheStanfordDaily/StanfordDaily-DataViz/blob/master/projects/2020-05-27-covid-testing/" target="_blank">[github]</a></h5> <i> Best Data Visualization of Volume 257 </i> <br> <i> Stanford Daily, </i> 2020. 
