--- a/projects.html
+++ b/projects.html
@@ -117,7 +117,7 @@
                   <h2>Computer Science</h2>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5> A NLP Approach to Understanding Patent Acceptance Criteria <a href="assets/docs/bw_patents.pdf" target="_blank">[paper]</a></h5> for <i> CS 229 </i> with Ryan Kearns and Sauren Khosla, 2022. 
+                    <div class="panel-heading accordion research-accordion"><h5> A NLP Approach to Understanding Patent Acceptance Criteria <a href="assets/docs/bw_patents.pdf" target="_blank">[paper]</a></h5> for <i> CS 224N </i> with Ryan Kearns and Sauren Khosla, 2022. 
                     </div>
                     <div class="panel-body panel-project">
                       <div class="panel-text">
