--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 							<div class="col-sm-8 col-md-4">
 								<div class="biothumb">
-									<img alt="image" src="assets/images/me.jpg" class="img-responsive">
+									<img alt="image" src="assets/images/bw_me.jpg" class="img-responsive">
 								</div>
 							</div>
 						</div>
@@ -112,7 +112,7 @@
 	<script src="assets/js/custom.js"></script>
 
 	<div class = "page-footer text-right py-3" style="font-size: 12px; margin-right: 10px">
-		Style inspiration from Cody Cook.
+		Style inspiration from Cody Cook. 
 	</div>
 </body>
 </html>
