--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Benjamin Wittenbrink - Projects</title>
   <meta name="description" content="Benjamin Wittenbrink Personal Website">
-  <meta name="keywords" content="Benjamin Witttenbrink, Wittenbrink, Economics, Website, Stanford">
+  <meta name="keywords" content="Benjamin Witttenbrink, Wittenbrink, Stanford, Economics, Website">
   <meta name="author" content="Benjamin Wittenbrink">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -77,11 +77,11 @@
 
 
                 <!-- Research -->
-                <h2>Research</h2>
+                <h2>Economics Research</h2>
 
                 
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5>Analyzing Candidate's Ideological Messaging Throughout the Electoral System <a href="assets/docs/bw_id_draft.pdf" target="_blank">[draft]</a><a href="assets/docs/bw_id_slides.pdf" target="_blank">[slides]</a></h5> under the direction of Matthew Gentzkow, <i> in progress. </i>
+                    <div class="panel-heading accordion research-accordion"><h5>Analyzing Candidate's Ideological Messaging Throughout the Electoral System <a href="assets/docs/bw_id_draft.pdf" target="_blank">[paper]</a><a href="assets/docs/bw_id_slides.pdf" target="_blank">[slides]</a></h5> <i> Received the 2022 Anna Luara Myers Prize for Oustanding Honors Thesis in Economics </i> <br> under the direction of Matthew Gentzkow, 2022.
                     </div>
                     <div class="panel-body panel-project">
                       <div class='panel-text'>
@@ -117,11 +117,21 @@
                   <h2>Computer Science</h2>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5> A NLP Approach to Understanding Patent Acceptance Criteria <a href="assets/docs/bw_patents.pdf" target="_blank">[paper]</a></h5> for <i> CS 224N </i> with Ryan Kearns and Sauren Khosla, 2022. 
+                    <div class="panel-heading accordion research-accordion"><h5> A NLP Approach to Understanding Patent Acceptance Criteria <a href="assets/docs/bw_patents.pdf" target="_blank">[paper]</a></h5> <i> Received CS224N Audience Selection for Best Poster</i><br> with Ryan Kearns and Sauren Khosla, 2022. 
                     </div>
                     <div class="panel-body panel-project">
                       <div class="panel-text">
                         Patent applications and acceptances are a useful domain for assessing the state of innovation across various fields, including biomedical sciences, artificial intelligence, software services, and more. The number of patents filed per year has nearly doubled since 2000 with over 650,000 patent filed in the 2020 fiscal year. Until now, no large-scale corpus of patent filings exists for ML and NLP practitioners to leverage. The Harvard USPTO Patent Dataset (HUPD), consisting of over 4.5 million English-language utility patent applications filed between 2004 and 2018 is the first example of such a corpus. Unlike other, smaller but similar corpora, this dataset contains the inventor-submitted versions of patent applications as opposed to the final versions of granted patents, allowing for the usage of NLP techniques at the time of filing. Taking advantage of this rich data, we vary the metadata inputs to a number of NLP models to conduct an ablation study on the binary classification of filed patents (i.e. acceptance or rejection). Our best metadata-augmented model achieves 63.32% binary classification accuracy, outperforming the best language models from the HUPD paper as well as our baseline models. Yet, for some text fields our best model still cannot outperform bag-of-words models, likely due to specific qualitative linguistic features of these fields.
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="panel panel-default">
+                    <div class="panel-heading accordion research-accordion"><h5> DeepCity: Using Images of Cities to Predict Work-from-Home Shocks <a href="assets/docs/bw_deepcity.pdf" target="_blank">[paper]</a></h5> for <i> CS 231N </i> with Diego Jasson and Arjun Ramani, 2022. 
+                    </div>
+                    <div class="panel-body panel-project">
+                      <div class="panel-text">
+                        COVID-19 reshaped American housing markets by causing workers with the ability to work-from-home to leave city centers for the suburbs. Economists typically study the drivers of such changes using tabular economic data, like population density. But this misses out on much of urban life that has not been tabulated, such as the presence of skyscrapers or upscale amenities. We propose this context can be visually learned. Using a dataset of over 60,000 images of American cities from Google Street View, we predict post-Covid housing market performance using a variety of neural methods and show three main results. First, a pre-trained vision transformer fine-tuned on our data, is able to predict an ordinal post-Covid housing performance with 32% accuracy, which is substantially better than other vision models (for context, randomly picking labels achieves 5% accuracy). Second, saliency maps suggest that our models captures key urban features like skylines, the distance to large buildings, and sidewalk corners. Third, an ensemble model that combines the scores from our vision transformer with tabular economic data outperforms either approach individually, achieving an accuracy of 51%. Our results suggest urban imagery contain unique information relevant to how the pandemic affected housing markets.
                       </div>
                     </div>
                   </div>
