fix typo: Laura

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								</button>
 								<h4 class="title">Benjamin Wittenbrink</h4>
 								<p> Welcome! </p>
-								<p> I am currently pursuing a Masters in Computer Science with a concentration in Artificial Intelligence at Stanford University (Class of '23). I graduated with honors from Stanford with a B.A. in Economics and a B.S. in Mathematics (Class of '22), receiving the Anna Luara Myers Prize for Oustanding Honors Thesis in Economics. I am interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. </p>
+								<p> I am currently pursuing a Masters in Computer Science with a concentration in Artificial Intelligence at Stanford University (Class of '23). I graduated with honors from Stanford with a B.A. in Economics and a B.S. in Mathematics (Class of '22), receiving the Anna Laura Myers Prize for Oustanding Honors Thesis in Economics. I am interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. </p>
 
 								<p> 
 									During the 2020-2021 academic year, I was on a leave of absence, working at <a href = "https://www.quantco.com"> QuantCo</a>, a data science startup at the intersection of econometrics and machine learning. 
