--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
 
                 
                   <div class="panel panel-default">
-                    <div class="panel-heading accordion research-accordion"><h5>Analyzing Candidate's Ideological Messaging Throughout the Electoral System <a href="assets/docs/bw_id_draft.pdf" target="_blank">[paper]</a><a href="assets/docs/bw_id_slides.pdf" target="_blank">[slides]</a></h5> <i> Received the 2022 Anna Luara Myers Prize for Oustanding Honors Thesis in Economics </i> <br> under the direction of Matthew Gentzkow, 2022.
+                    <div class="panel-heading accordion research-accordion"><h5>Analyzing Candidate's Ideological Messaging Throughout the Electoral System <a href="assets/docs/bw_id_draft.pdf" target="_blank">[paper]</a><a href="assets/docs/bw_id_slides.pdf" target="_blank">[slides]</a></h5> <i> Received the 2022 Anna Laura Myers Prize for Oustanding Honors Thesis in Economics </i> <br> under the direction of Matthew Gentzkow, 2022.
                     </div>
                     <div class="panel-body panel-project">
                       <div class='panel-text'>
