Miinor update to bio (add MG)

--- a/index.html
+++ b/index.html
@@ -74,12 +74,14 @@
 								</button>
 								<h4 class="title">Benjamin Wittenbrink</h4>
 								<p> Welcome! </p>
-								<p> I am currently pursuing a Masters in Computer Science with a concentration in Artificial Intelligence at Stanford University (Class of '23). I graduated with honors from Stanford with a B.A. in Economics and a B.S. in Mathematics (Class of '22), receiving the Anna Laura Myers Prize for Oustanding Honors Thesis in Economics. I am interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. </p>
+								<p> I am currently pursuing a Masters in Computer Science with a concentration in Artificial Intelligence at Stanford University (Class of '23). I graduated with honors from Stanford with a B.A. in Economics and a B.S. in Mathematics (Class of '22), receiving the Anna Laura Myers Prize for Oustanding Honors Thesis in Economics. 
+
+								I am interested in applying a quantitative, mathematical, and data-driven lens to better understand issues of economic, political, and social importance. </p>
 
 								<p> 
-									During the 2020-2021 academic year, I was on a leave of absence, working at <a href = "https://www.quantco.com"> QuantCo</a>, a data science startup at the intersection of econometrics and machine learning. 
+									I am currently working as a research assistant with <a href="https://www.matthewgentzkow.com"> Matt Gentzkow </a> on projects surrounding digital and social media, political advertising, and polarization. Previously, I worked at <a href = "https://www.quantco.com"> QuantCo</a>, a data science startup at the intersection of causal inference and machine learning, on a leave of absense during the 2020-2021 academic year.
 
-									For the previous summer, I worked as a summer analyst on the New York Federal Reserve's <a href="https://www.newyorkfed.org/research/economists/department">Financial Intermediation Research </a> team and as a research assistant for <a href="https://mgduggan.people.stanford.edu"> Mark Duggan </a> and <a href="https://web.stanford.edu/~gopi/"> Gopi Goda</a> at the National Bureau of Economic Research (and previously at the Stanford Institute for Economic Policy Research). 
+									For the summer of 2020, I also worked as a summer analyst on the New York Federal Reserve's <a href="https://www.newyorkfed.org/research/economists/department">Financial Intermediation Research </a> team and as a research assistant for <a href="https://mgduggan.people.stanford.edu"> Mark Duggan </a> and <a href="https://web.stanford.edu/~gopi/"> Gopi Goda</a> at the National Bureau of Economic Research (and previously at the Stanford Institute for Economic Policy Research). 
 
 									In 2019, I interned with QuantCo's Zurich team.
 									Before that, I worked on a neuroeconomics project with the <a href="https://apexlab.uchicago.edu"> Apex Lab </a> and as a research assistant within <a href="https://voices.uchicago.edu/jlist"> John List</a>'s lab, both at the University of Chicago. </p>
